--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<!--getter and setter config-->
 		<dependency>
@@ -123,6 +124,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-java8</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<!--Imbeded postgres sql datasource start-->
 		<dependency>
@@ -142,6 +144,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<layout>MODULE</layout>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${serfire-plugin-version}</version>
+				<configuration>
+					<goal>package</goal>
+					<includes>
+						<include>**/**Test.java</include>
+					</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
