--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github</groupId>
 	<artifactId>criteriasearchhelper</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>CriteriaSearchHelper</name>
@@ -38,7 +38,7 @@
 		<connection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</connection>
 		<developerConnection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</developerConnection>
 		<url>https://github.com/Merdoc97/criteria-builder-helper.git</url>
-		<tag>release-0.0.1-SNAPSHOT</tag>
+		<tag>release</tag>
 	</scm>
 
 	<dependencyManagement>
