--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>${release-plugin-version}</version>
 				<configuration>
-					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<tagNameFormat>v@{project.version}-release</tagNameFormat>
 					<releaseProfiles>release</releaseProfiles>
 					<useReleaseProfile>false</useReleaseProfile>
 					<autoVersionSubmodules>false</autoVersionSubmodules>
