--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,13 @@
         <version>1.5.12.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    
+
+    <scm>
+        <connection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</connection>
+        <developerConnection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</developerConnection>
+        <url>https://github.com/Merdoc97/criteria-builder-helper.git</url>
+    </scm>
+
     <modules>
         <module>searcher</module>
         <module>searcher-starter</module>
