--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -42,7 +42,7 @@
                     <tagNameFormat>v@{project.version}-release</tagNameFormat>
                     <releaseProfiles>release</releaseProfiles>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <pushChanges>true</pushChanges>
+                    <pushChanges>false</pushChanges>
                     <branchName>${project.version}-RELEASE</branchName>
                 </configuration>
             </plugin>
