--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <connection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</connection>
         <developerConnection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</developerConnection>
         <url>https://github.com/Merdoc97/criteria-builder-helper.git</url>
+        <tag>release</tag>
     </scm>
 
     <modules>
