--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github</groupId>
     <artifactId>criteriasearchhelper</artifactId>
-    <version>0.0.23-SNAPSHOT</version>
+    <version>0.0.24-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>criteriasearchhelper</name>
     <description>Criteria builder helper for dynamic sql queries</description>
@@ -19,7 +19,8 @@
     <scm>
         <connection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</connection>
 
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
 
     <modules>
         <module>searcher</module>
