--- a/searcher-starter/pom.xml
+++ b/searcher-starter/pom.xml
@@ -4,12 +4,12 @@
 
 
     <artifactId>searcher-auto-configuration</artifactId>
-    <version>0.0.26-SNAPSHOT</version>
+    <version>0.0.33-RELEASE</version>
     <packaging>jar</packaging>
     <parent>
         <groupId>com.github</groupId>
         <artifactId>criteriasearchhelper</artifactId>
-        <version>0.0.26-SNAPSHOT</version>
+        <version>0.0.33-RELEASE</version>
     </parent>
 
     <dependencies>
