--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github</groupId>
     <artifactId>criteriasearchhelper</artifactId>
-    <version>0.0.34-RELEASE</version>
+    <version>0.0.35-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>criteriasearchhelper</name>
     <description>Criteria builder helper for dynamic sql queries</description>
