--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -4,13 +4,13 @@
 
 
     <artifactId>searcher-core</artifactId>
-    <version>0.0.41-SNAPSHOT</version>
+    <version>0.0.41-RELEASE</version>
     <packaging>jar</packaging>
     <name>searcher-core</name>
     <parent>
         <groupId>com.github</groupId>
         <artifactId>criteriasearchhelper</artifactId>
-        <version>0.0.41-SNAPSHOT</version>
+        <version>0.0.41-RELEASE</version>
     </parent>
 
 
