migrate to java 11 and spring boot 2.x

--- a/searcher-starter/src/test/resources/application.properties
+++ b/searcher-starter/src/test/resources/application.properties
@@ -2,9 +2,11 @@ spring.profiles.active=com.github.config.test
 spring.profiles.include=com.github.config.test
 
 #Datasource configuration
-spring.jpa.properties.db.url = testurl
-spring.jpa.properties.db.user = testuser
-spring.jpa.properties.db.password = testpwd
+#Datasource configuration
+spring.datasource.url=jdbc:tc:postgresql://criteria-test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.jpa.properties.show.sql=true
 spring.jpa.properties.hibernate.sql.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.connection.charset=UTF-8
