--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -13,23 +13,25 @@
         <version>0.0.42-SNAPSHOT</version>
     </parent>
 
+
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <layout>MODULE</layout>
-                </configuration>
+                <!--<configuration>
+                    <layout>NONE</layout>
+                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${serfire-plugin-version}</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <goal>package</goal>
                     <includes>
-                        <include>**/**Suite.java</include>
+                        <include>**/**Test.java</include>
                     </includes>
                 </configuration>
             </plugin>
