--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -12,22 +12,19 @@
         <artifactId>criteriasearchhelper</artifactId>
         <version>0.0.42-SNAPSHOT</version>
     </parent>
-
-
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!--<configuration>
+                <configuration>
                     <layout>NONE</layout>
-                </configuration>-->
+                    <executable>false</executable>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
                 <configuration>
                     <goal>package</goal>
                     <includes>
