--- a/searcher-starter/pom.xml
+++ b/searcher-starter/pom.xml
@@ -16,7 +16,8 @@
         <dependency>
             <groupId>com.github</groupId>
             <artifactId>searcher-core</artifactId>
-            <version>0.0.42-SNAPSHOT</version>
+            <version>${project.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -28,6 +29,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <layout>NONE</layout>
+                    <executable>false</executable>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
