--- a/searcher-starter/src/test/resources/application.properties
+++ b/searcher-starter/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=com.github.config.test
 spring.profiles.include=com.github.config.test
-
+spring.flyway.enabled=false
 #Datasource configuration
 #Datasource configuration
 spring.datasource.url=jdbc:tc:postgresql://criteria-test
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.order.updates=true
 spring.jpa.properties.driver.classname=org.postgresql.Driver
 spring.jpa.properties.hibernate.connection.pool_size=2
 spring.jpa.properties.hibernate.batch.size=100
-spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.conn.max.life=600000
 spring.jpa.properties.hibernate.statistic=true
 spring.jpa.properties.hibernate.format_sql=true
