--- a/searcher-starter/pom.xml
+++ b/searcher-starter/pom.xml
@@ -16,8 +16,7 @@
         <dependency>
             <groupId>com.github</groupId>
             <artifactId>searcher-core</artifactId>
-            <version>${project.version}</version>
-            <optional>true</optional>
+            <version>0.0.42-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
