--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -11,6 +11,7 @@
         <groupId>com.github</groupId>
         <artifactId>criteriasearchhelper</artifactId>
         <version>0.0.42-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <build>
         <plugins>
