--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -11,16 +11,15 @@
         <groupId>com.github</groupId>
         <artifactId>criteriasearchhelper</artifactId>
         <version>0.0.42-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.12.RELEASE</version>
                 <configuration>
-                    <layout>NONE</layout>
-                    <executable>false</executable>
+                    <layout>MODULE</layout>
                 </configuration>
             </plugin>
             <plugin>
