--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <modules>
         <module>searcher</module>
-<!--        <module>searcher-starter</module>-->
+        <module>searcher-starter</module>
     </modules>
 
     <properties>
