--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,7 +38,7 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'LOW' 
+          severity: 'MEDIUM' 
           output: 'result.sarif'
 
       - name: Upload Trivy scan results to GitHub Security tab
